@@ -1,3 +1,8 @@
+2015-07-28  Niibe Yutaka  <gniibe@fsij.org>
+
+	* fraucheky.c (fraucheky_setup, fraucheky_get_descriptor): Follow
+	the API change of USB driver.
+
 2015-07-27  Niibe Yutaka  <gniibe@fsij.org>
 
 	* configure (check_build_operating_system)
